examples/errors/music/unknown_decoration.abc
X:1
T:Unknown Decoration Example
M:4/4
L:1/8
K:C
% M014: Unknown decoration name
!trillx!C2 D2 E2 F2 |
